--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
       background-color: rgba(0, 0, 0, 0.5);
       min-height: 100vh;
       padding: 60px 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-bottom: 20px;
       text-shadow: 2px 2px 6px #000;
     }
 
     #contador {
-      font-size: 5rem;
+      font-size: 2.2rem;
       font-weight: bold;
       margin-bottom: 30px;
       text-shadow: 2px 2px 6px #000;
     }
 
     .emoji {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin: 10px;
     }
 
@@ -56,30 +60,40 @@
     <div class="emoji">🌴 🏖️ 🍹 🕶️ 🌞 🏄‍♂️</div>
 
     <div class="footer">
-      ¡Prepárate para desconectar!
+      ¡Prepárate para desconectar y disfrutar al máximo!
     </div>
   </div>
 
   <script>
-    // Fecha de inicio de tus vacaciones
-    const fechaVacaciones = new Date("2025-08-29"); // Ajusta esta fecha
+    // Introduce tu fecha en el formato normal: año, mes (1-12), día
+    const anio = 2025;
+    const mes = 8;   // Agosto
+    const dia = 29;  // 29
+
+    // Creamos la fecha para JavaScript restando 1 al mes
+    const fechaVacaciones = new Date(anio, mes - 1, dia, 0, 0, 0);
 
     function actualizarContador() {
-      const hoy = new Date();
-      hoy.setHours(0,0,0,0);
-      const diferencia = fechaVacaciones - hoy;
-      const diasRestantes = Math.ceil(diferencia / (1000 * 60 * 60 * 24));
+      const ahora = new Date();
+      const diferencia = fechaVacaciones - ahora;
 
-      const mensaje = diasRestantes > 0
-        ? `${diasRestantes} día${diasRestantes !== 1 ? 's' : ''}`
-        : diasRestantes === 0
-        ? "¡Hoy es el gran día! 🎉 ¡Empiezan tus vacaciones! 🏖️"
-        : "¡Ya estás de vacaciones! Disfruta 🌴🍹";
+      if (diferencia <= 0) {
+        document.getElementById("contador").textContent = 
+          "¡Ya empezaron tus vacaciones! 🎉🏖️";
+        return;
+      }
 
-      document.getElementById("contador").textContent = mensaje;
+      const dias = Math.floor(diferencia / (1000 * 60 * 60 * 24));
+      const horas = Math.floor((diferencia % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutos = Math.floor((diferencia % (1000 * 60 * 60)) / (1000 * 60));
+
+      document.getElementById("contador").textContent =
+        `${dias} día${dias!==1?'s':''}, ${horas} hora${horas!==1?'s':''}, ${minutos} min`;
     }
 
+    // Actualiza al cargar y cada minuto
     actualizarContador();
+    setInterval(actualizarContador, 60000);
   </script>
 </body>
 </html>
